--- a/tasks/templates/tasks_page.html
+++ b/tasks/templates/tasks_page.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tasks - Ticksy ToDo</title>
     <link rel="stylesheet" href="{% static 'style.css' %}" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header>
@@ -42,7 +43,9 @@
                                 {{ form.title|as_crispy_field }}
                                 {{ form.due_date|as_crispy_field }}
                                 {{ form.category|as_crispy_field }}
-                                <button type="submit" class="btn-primary">Add Task</button>
+                                <button type="submit" class="btn-primary">
+                                    <i class="fas fa-plus"></i> Add Task
+                                </button>
                             </div>
                         </form>
                     </div>
@@ -68,10 +71,18 @@
                                             </div>
                                         </div>
                                         <div class="task-actions">
-                                            <a href="{% url 'task_detail' task.id %}" class="btn-small">View</a>
-                                            <a href="{% url 'task_edit' task.id %}" class="btn-small">Edit</a>
-                                            <a href="{% url 'task_toggle_complete' task.id %}" class="btn-small">Complete</a>
-                                            <a href="{% url 'task_delete' task.id %}" class="btn-small btn-danger">Delete</a>
+                                            <a href="{% url 'task_detail' task.id %}" class="btn-small">
+                                                <i class="fas fa-eye"></i> View
+                                            </a>
+                                            <a href="{% url 'task_edit' task.id %}" class="btn-small">
+                                                <i class="fas fa-edit"></i> Edit
+                                            </a>
+                                            <a href="{% url 'task_toggle_complete' task.id %}" class="btn-small">
+                                                <i class="fas fa-check"></i> Complete
+                                            </a>
+                                            <a href="{% url 'task_delete' task.id %}" class="btn-small btn-danger">
+                                                <i class="fas fa-trash"></i> Delete
+                                            </a>
                                         </div>
                                     </div>
                                     {% endfor %}
@@ -103,10 +114,18 @@
                                             </div>
                                         </div>
                                         <div class="task-actions">
-                                            <a href="{% url 'task_detail' task.id %}" class="btn-small">View</a>
-                                            <a href="{% url 'task_edit' task.id %}" class="btn-small">Edit</a>
-                                            <a href="{% url 'task_toggle_complete' task.id %}" class="btn-small">Mark Pending</a>
-                                            <a href="{% url 'task_delete' task.id %}" class="btn-small btn-danger">Delete</a>
+                                            <a href="{% url 'task_detail' task.id %}" class="btn-small">
+                                                <i class="fas fa-eye"></i> View
+                                            </a>
+                                            <a href="{% url 'task_edit' task.id %}" class="btn-small">
+                                                <i class="fas fa-edit"></i> Edit
+                                            </a>
+                                            <a href="{% url 'task_toggle_complete' task.id %}" class="btn-small">
+                                                <i class="fas fa-undo"></i> Mark Pending
+                                            </a>
+                                            <a href="{% url 'task_delete' task.id %}" class="btn-small btn-danger">
+                                                <i class="fas fa-trash"></i> Delete
+                                            </a>
                                         </div>
                                     </div>
                                     {% endfor %}
