added footer content and styling

--- a/tasks/templates/task_confirm_delete.html
+++ b/tasks/templates/task_confirm_delete.html
@@ -57,8 +57,23 @@
             </div>
         </section>
     </main>
-    <footer>
-
-    </footer>
+     <footer class="site-footer">
+  <div class="footer-container">
+    <div class="social-icons">
+      <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://www.facebook.com" target="_blank" aria-label="Facebook">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="https://www.linkedin.com" target="_blank" aria-label="LinkedIn">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+    </div>
+    <div class="footer-text">
+      <p>&copy; 2025 Ticksy. All rights reserved.</p>
+    </div>
+  </div>
+</footer>
 </body>
 </html>
