--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -10,6 +10,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ticksy ToDo</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="{% static 'style.css' %}" />
 </head>
 <body>
@@ -86,9 +87,29 @@
     </div>
 </section>
     </main>
-    <footer>
+ <footer class="site-footer">
+  <div class="footer-container">
+    <div class="social-icons">
+      <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://www.facebook.com" target="_blank" aria-label="Facebook">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="https://www.linkedin.com" target="_blank" aria-label="LinkedIn">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+    </div>
+    <div class="footer-text">
+      <p>&copy; 2025 Ticksy. All rights reserved.</p>
+    </div>
+  </div>
+</footer>
+ 
 
-    </footer>
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/aa9af45995.js" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
