Update static files and settings

--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -83,7 +83,7 @@
             <p>Ticksy is available on all your devices. Stay productive at home, work, or on the go.</p>
             <a href="{% url 'account_signup' %}" class="btn-hero-primary">Join Now</a>
         </div>
-        <img src="{% static 'images/access.webp' %}" alt="Access your tasks anywhere" class="access-img" />
+        <img src="{% static 'images/Access.webp' %}" alt="Access your tasks anywhere" class="access-img" />
     </div>
 </section>
     </main>
