--- a/tasks/templates/task_confirm_delete.html
+++ b/tasks/templates/task_confirm_delete.html
@@ -77,3 +77,14 @@
 </footer>
 </body>
 </html>
+<style>
+    body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+}
+main {
+  flex: 1;
+}
+</style>
