--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -20,6 +20,15 @@
 </div>
 
 <style>
+    body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+}
+main {
+  flex: 1;
+}
 .auth-container {
     max-width: 400px;
     margin: 50px auto;
